# internal/handler/dto/dto_models.go
@@ -10,3 +10,10 @@ type RegisterBody struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type AppealBody struct {
+	Name    string `json:"name"`
+	Email   string `json:"email"`
+	Theme   int    `json:"theme"`
+	Message string `json:"message"`
+}
